--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,33 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+###OSX###
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
 
-# OS generated files #
-######################
-.DS_Store*
-ehthumbs.db
-Icon?
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+
+###Windows###
+
+# Windows image file caches
 Thumbs.db
-desktop.ini
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+
+###SublimeText###
+
+# SublimeText project files
+*.sublime-workspace
